--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,12 @@
 spring:
   jpa:
     open-in-view: false
+  datasource:
+    initialization-mode: always
+    url: jdbc:postgresql://localhost:5432/pagination_and_searching
+    hikari:
+      username: postgres
+      password: password
+      host: localhost
+      port: 5432
+      database: pagination_and_searching
