--- a/docker-compose.nobuild.yml
+++ b/docker-compose.nobuild.yml
@@ -11,6 +11,16 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_DB=pagination_and_searching
 
+  elasticsearch:
+    image: elasticsearch:6.6.1
+    container_name: elastic.paging
+    ports: 
+      - 9200:9200
+      - 9300:9300
+    environment: 
+      - discovery.type=single-node
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+
   pagination:
     image: juliuskrah/pagination
     container_name: pagination
@@ -18,6 +28,8 @@ services:
       - 5050:8080
     environment: 
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/pagination_and_searching
-      - SPRING_DATASOURCE_HIKARI_HOST=postgres
+      - SPRING_DATASOURCE_HIKARI_USERNAME=postgres
+      - SPRING_DATASOURCE_HIKARI_PASSWORD=password
     depends_on: 
       - postgres
+      - elasticsearch
